--- a/public/nitron/css/style.sass
+++ b/public/nitron/css/style.sass
@@ -13,7 +13,12 @@
   width: 100%
   height: 100%
 
+
 .modalInner
+  padding: 20px
+  border:
+    radius: 10px
+  background: #fff
   position: absolute
   top: 50%
   left: 50%
