--- a/public/nitron/css/style.sass
+++ b/public/nitron/css/style.sass
@@ -1,3 +1,7 @@
+body
+  padding: 0
+  margin: 0
+
 .hidden
   display: none
 
@@ -23,3 +27,25 @@
   top: 50%
   left: 50%
   transform: translate(-50%,-50%)
+
+
+.wrapper
+  display: flex
+  flex-direction: row
+
+
+.pages
+  width: 300px
+
+.content
+
+
+.pages,
+.content
+  padding: 10px
+
+  ul
+    padding: 0
+    margin: 0
+
+
