--- a/public/nitron/css/style.css
+++ b/public/nitron/css/style.css
@@ -1,3 +1,7 @@
+body {
+  padding: 0;
+  margin: 0; }
+
 .hidden {
   display: none; }
 
@@ -21,5 +25,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
+
+.wrapper {
+  display: flex;
+  flex-direction: row; }
+
+.pages {
+  width: 300px; }
+
+.pages,
+.content {
+  padding: 10px; }
+  .pages ul,
+  .content ul {
+    padding: 0;
+    margin: 0; }
 
 /*# sourceMappingURL=style.css.map */
