--- a/public/nitron/css/style.css
+++ b/public/nitron/css/style.css
@@ -38,7 +38,21 @@ body {
   padding: 10px; }
   .pages ul,
   .content ul {
-    padding: 0;
     margin: 0; }
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000; }
+
+.preloader__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
