Admin panel / FE view by slug and page_id

--- a/app/views/page.pug
+++ b/app/views/page.pug
@@ -2,10 +2,9 @@ html
     head
         meta(name="description", content= page_description)
         meta(name="keywords", content= page_keywords)
-        title= seo_itle
+        title= seo_title
 
     body
         h1= title
-
 
         p= content
