--- a/public/nitron/css/style.css
+++ b/public/nitron/css/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 body {
   padding: 0;
   margin: 0; }
@@ -54,5 +57,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff; }
+
+.content input[type="text"],
+.content select,
+.content button {
+  border: 1px solid #000;
+    border-radius: 0;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
