--- a/public/nitron/css/style.sass
+++ b/public/nitron/css/style.sass
@@ -1,3 +1,6 @@
+*
+  box-sizing: border-box
+
 body
   padding: 0
   margin: 0
@@ -63,3 +66,14 @@ body
   left: 50%
   transform: translate(-50%,-50%)
   color: #fff
+
+.content
+  input[type="text"],
+  select,
+  button
+    border: 1px solid #000
+      radius: 0
+    padding: 10px
+    margin:
+      bottom: 10px
+    width: 100%
