Adding content with content attribute / simple page view by page_id and page_slug (correct views)

--- a/app/views/page.pug
+++ b/app/views/page.pug
@@ -6,5 +6,10 @@ html
 
     body
         h1= title
+        p Page id:
+            strong= page_id
 
-        p= content
+        each entry in content
+            div
+                h3= entry.name
+                p= entry.content
