--- a/public/nitron/css/style.sass
+++ b/public/nitron/css/style.sass
@@ -70,10 +70,12 @@ body
 .content
   input[type="text"],
   select,
-  button
+  button,
+  textarea
     border: 1px solid #000
       radius: 0
     padding: 10px
     margin:
       bottom: 10px
     width: 100%
+    resize: none
