--- a/app/views/page.pug
+++ b/app/views/page.pug
@@ -3,13 +3,15 @@ html
         meta(name="description", content= page_description)
         meta(name="keywords", content= page_keywords)
         title= seo_title
+        link(type="text/css", href="/assets/styles.css",rel="stylesheet")
 
     body
-        h1= title
-        p Page id:
-            strong= page_id
+        .wrapper
+            h1= title
+            p Page id:
+                strong= page_id
 
-        each entry in content
-            div
-                h3= entry.name
-                p= entry.content
+            each entry in content
+                div
+                    h3= entry.name
+                    p= entry.content
