--- a/public/nitron/css/style.sass
+++ b/public/nitron/css/style.sass
@@ -48,8 +48,16 @@ body
   padding: 5px
 
   ul
-    //padding: 0
+    list-style: none
     margin: 0
+    padding: 0
+
+    ul
+      padding:
+        left: 20px
+
+  li
+    list-style: none
 
 
 .preloader
@@ -79,3 +87,7 @@ body
       bottom: 10px
     width: 100%
     resize: none
+
+
+[data-is-deleted="1"]
+  //opacity: .7
