--- a/public/nitron-ngcli/src/app/app.component.html
+++ b/public/nitron-ngcli/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="app_header">Nitron </section>
+<app-header></app-header>
 <section class="app_keeper">
   <router-outlet></router-outlet>
 </section>
