--- a/app/views/templates/pagetemplate.html
+++ b/app/views/templates/pagetemplate.html
@@ -1,1 +1,1 @@
-<html><head><meta name="description"/><meta name="keywords"/><title></title><link type="text/css" href="/assets/styles.css" rel="stylesheet"/></head><body><div class="wrapper"><h1>SIUUUUP</h1></div></body></html>
+<!-- TemplateName: Page template--><html><head><meta name="description"/><meta name="keywords"/><title></title><link type="text/css" href="/assets/styles.css" rel="stylesheet"/></head><body><div class="wrapper"><h1>SIUUUUP</h1></div></body></html>
